--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Paul E. Soto
   gtag('config', 'UA-108085250-1');
 </script>
 
-<img src="profile_picture.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Fernando Fernandez)"; algin="middle">
+<img src="profile.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Fernando Fernandez)"; algin="middle">
 <br>
 Welcome! My name is Zhe Wang and I am a Master in Applied Mathematics at the Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu and Professor Jian Sun. I will be available for interviews at both the Simposio de la Asociación Española de Economía (SAEe), December 14-16, in Barcelona and later at the Allied Social Science Associations (ASSA) meeting, January 5-7, in Philadelphia.
 
