--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-title: Paul E. Soto
+title: Zhe Wang
 ---
 <div class="home">
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108085250-1"></script>
@@ -12,10 +12,10 @@ title: Paul E. Soto
   gtag('config', 'UA-108085250-1');
 </script>
 
-<img src="profile.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Fernando Fernandez)"; algin="middle">
+<img src="profile.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Zhe Wang)"; algin="middle">
 <br>
-Welcome! My name is Zhe Wang and I am a Master in Applied Mathematics at the Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu and Professor Jian Sun. I will be available for interviews at both the Simposio de la Asociación Española de Economía (SAEe), December 14-16, in Barcelona and later at the Allied Social Science Associations (ASSA) meeting, January 5-7, in Philadelphia.
+Welcome! My name is Zhe Wang and I am a Master in Applied Mathematics at the Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu and Professor Jian Sun.
 
 <br><br>
-My research interests lie in financial economics. I've researched how banks cause credit frictions to the real economy, how they interact with regulators and how their CEOs/CFOs words can be used to proxy the uncertainty banks face. Helping me along the way, I've been learning how to apply recent techniques in machine learning and natural language processing to these economic problems. Feel free to look at my <a href="https://pesoto.github.io/research" target="_self">research</a> and my <a href="https://pesoto.github.io/research" target="_self">tutorials</a> to learn more!
+My research interests lie in Artificial Intelligence and Machine Learning. I am particularly interested in generative model, optimization and have a systematic knowledge related to these fields. I am now looking for a Phd position overseas. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/research" target="_self">tutorials</a> to learn more!
 </div>
