--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ title: Zhe Wang
   gtag('config', 'UA-108085250-1');
 </script>
 
-<img src="profile.jpg" alt="Paul Soto pic" style="width:240px;height:360px;" title="Paul Soto (Photo Credit: Zhe Wang)"; algin="middle">
+<img src="profile.jpg" alt="Zhe Wang pic" style="width:240px;height:360px;" title="Zhe Wang (Photo Credit: Zhe Wang)"; algin="middle">
 <br>
 Welcome! My name is Zhe Wang and I am a Master in Applied Mathematics at the Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu and Professor Jian Sun.
 
