--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@ layout: page
 title: Research
 permalink: /research/
 ---
-<strong><a href="https://www.dropbox.com/s/v679toklnwtg9tf/paulesoto_jmp.pdf?dl=0">Unrolling FISTA to solve low rank problems</a></strong> <br><br>
+<strong><a href="https://www.dropbox.com/s/v679toklnwtg9tf/paulesoto_jmp.pdf?dl=0">Unrolling FISTA to solve Low-Rank related problems</a></strong> <br><br>
 <p style="text-align:justify"><i>Abstract: </i>Aided by the accessable of BP Algorithm for SVD operator, it is possible to unroll ISTA for low-rank related problems.To accelerate the convergence rate while avoiding the design of the momentum term manually, We come up with a structure similar to LSTM, this method also gives an insight to unroll RPCA into deep neural network.</p>
 <br>
 <strong><a href="https://www.dropbox.com/s/nx5v4492pi1h2ls/DressingUp_Manuscript.pdf?dl=0">Dressing Up for the Regulators: Evidence from the Largest-Ever Supervisory Review</a></strong><br>with Puriya Abbassi, Rajkamal Iyer and Jos&eacute;-Luis Peydr&oacute;<br><br>
