--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@ title: Zhe Wang
 <br>
 Welcome! My name is Zhe Wang and I am a master in Applied Mathematics at Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu & Professor Jian Sun. Now I'm looking for an opening avaiable for PhD overseas.
 <br><br>
-My research interests lie in Artificial Intelligence and Machine Learning. I am particularly interested in generative model, optimization and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/research" target="_self">tutorials</a> to learn more!
+My research interests lie in Artificial Intelligence and Machine Learning. I am particularly interested in generative model, optimization and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/research" target="_self">tutorials</a> to known more!
 </div>
