--- a/tutorials.html
+++ b/tutorials.html
@@ -3,15 +3,15 @@ layout: page
 title: Tutorials
 permalink: /tutorials/
 ---
-Take a look at some of my Python tutorials for textual analysis. 
+Take a look at some of my tutorials for Optimization and Generative Models. 
 <br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/1_Web_Scraping_Tutorial.ipynb" target="_self">Web Scraping with Python</a><br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/1_Web_Scraping_Tutorial.ipynb" target="_self">The analysis of GANs from mathematical perspective</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/2_Text_Preprocessing_Tutorial.ipynb" target="_self">Text Preprocessing</a><br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/2_Text_Preprocessing_Tutorial.ipynb" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/5_Skip_Gram_Tutorial.ipynb" target="_self">Finding Vector Representations of Words (Skip-gram model)</a><br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/5_Skip_Gram_Tutorial.ipynb" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">Long Short Term Memory (LSTM) Models</a><br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">The analysis of Primal-Dual theorey</a><br>
 
 
