--- a/tutorials.html
+++ b/tutorials.html
@@ -13,5 +13,8 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <a href="https://github.com/pesoto/Text-Analysis/blob/master/5_Skip_Gram_Tutorial.ipynb" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
 <a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">The analysis of Primal-Dual theorey</a><br>
-
+<br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">Some work about the combination of GAN and VAE (Part 1)</a><br>
+<br>
+<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">Some work about the combination of GAN and VAE (Part 2)</a><br>
 
