--- a/tutorials.html
+++ b/tutorials.html
@@ -6,7 +6,7 @@ permalink: /tutorials/
 Take a look at some of my tutorials for Optimization and Generative Models. 
 <br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/1_Web_Scraping_Tutorial.ipynb" target="_self">The analysis of GANs from mathematical perspective</a><br>
+<a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">The analysis of GANs from mathematical perspective</a><br>
 <br>
 <a href="https://github.com/pesoto/Text-Analysis/blob/master/2_Text_Preprocessing_Tutorial.ipynb" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
