--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">The analysis of GANs from mathematical perspective</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/2_Text_Preprocessing_Tutorial.ipynb" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
+<a href="https://zhuanlan.zhihu.com/p/27987845" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
 <a href="https://github.com/pesoto/Text-Analysis/blob/master/5_Skip_Gram_Tutorial.ipynb" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
