--- a/tutorials.html
+++ b/tutorials.html
@@ -10,7 +10,7 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://zhuanlan.zhihu.com/p/27987845" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/5_Skip_Gram_Tutorial.ipynb" target="_self">The analysis of ADMM and Fast ADMM</a><br>
+<a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
 <a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">The analysis of Primal-Dual theorey</a><br>
 <br>
