--- a/tutorials.html
+++ b/tutorials.html
@@ -12,9 +12,9 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">The analysis of Primal-Dual theorey</a><br>
+<a href="https://zhuanlan.zhihu.com/p/31234645" target="_self">The analysis of Primal-Dual theorey</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">Some work about the combination of GAN and VAE (Part 1)</a><br>
+<a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">Some work about the combination of GAN and VAE (Part 1)</a><br>
 <br>
-<a href="https://github.com/pesoto/Text-Analysis/blob/master/6_LSTM_Tutorial.ipynb" target="_self">Some work about the combination of GAN and VAE (Part 2)</a><br>
+<a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">Some work about the combination of GAN and VAE (Part 2)</a><br>
 
