--- a/tutorials.html
+++ b/tutorials.html
@@ -6,9 +6,9 @@ permalink: /tutorials/
 Take a look at some of my tutorials for Optimization and Generative Models. 
 <br>
 <br>
-<a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">The analysis of GANs from mathematical perspective</a><br>
+<a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">The analysis of GANs from mathematical perspective</a><br>
 <br>
-<a href="https://zhuanlan.zhihu.com/p/27987845" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
+<a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
 <a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
