--- a/tutorials.html
+++ b/tutorials.html
@@ -12,7 +12,7 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
-<a href="https://https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">The analysis of Primal-Dual theorey</a><br>
+<a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">The analysis of Primal-Dual theorey</a><br>
 <br>
 <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">The introduction for Lagrange Method</a><br>
 <br>
