--- a/tutorials.html
+++ b/tutorials.html
@@ -14,7 +14,7 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">The analysis of Primal-Dual theorey</a><br>
 <br>
-<a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">The introduction for Lagrange Method</a><br>
+<a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">A thorough introduction for Lagrange Method</a><br>
 <br>
 <a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">Some work about the combination of GAN and VAE (Part 1)</a><br>
 <br>
