--- a/tutorials.html
+++ b/tutorials.html
@@ -10,7 +10,7 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
-<a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">The analysis of ADMM and Fast ADMM</a><br>
+<a href="https://github.com/zhexjtu/Optimization/blob/master/ADMM%2C%20fast%20ADMM%20and%20application.pdf" target="_self">The analysis of ADMM and Fast ADMM</a><br>
 <br>
 <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">The analysis of Primal-Dual theorey</a><br>
 <br>
