--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zhe Wang
 
 <img src="profile.jpg" alt="Zhe Wang pic" style="width:240px;height:360px;" title="Zhe Wang (Photo Credit: Zhe Wang)"; algin="middle">
 <br>
-Welcome! My name is Zhe Wang and I am a master in Applied Mathematics at Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu & Professor Jian Sun. Now I'm looking for an opening position for PhD overseas.
+Welcome! My name is Zhe Wang and I am a master in Applied Mathematics at Xi'an Jiaotong Univeristy under the supervision of Professor Zongben Xu & Professor <a href="http://gr.xjtu.edu.cn/web/jiansun/main" target="_self">Jian Sun<a>. Now I'm looking for an opening position for PhD overseas.
 <br><br>
 My research interests lie in Artificial Intelligence and Machine Learning. I am particularly interested in generative model, optimization and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/tutorials" target="_self">tutorials</a> to known more!
 </div>
