--- a/tutorials.html
+++ b/tutorials.html
@@ -6,7 +6,7 @@ permalink: /tutorials/
 Take a look at some of my tutorials for Optimization and Generative Models. 
 <br>
 <br>
-<a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">The analysis of GANs from mathematical perspective</a><br>
+The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English)</a><br>
 <br>
 <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
 <br>
