--- a/tutorials.html
+++ b/tutorials.html
@@ -8,15 +8,15 @@ Take a look at some of my tutorials for Optimization and Generative Models.
 <br>
 The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English)</a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">The application of GANs in Image to Image Translation and Inverse Problems </a><br>
+The application of GANs in Image to Image Translation and Inverse Problems <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">(English)</a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://github.com/zhexjtu/Optimization/blob/master/ADMM%2C%20fast%20ADMM%20and%20application.pdf" target="_self">The analysis of ADMM and Fast ADMM</a><br>
+The analysis of ADMM and Fast ADMM <a href="https://github.com/zhexjtu/Optimization/blob/master/ADMM%2C%20fast%20ADMM%20and%20application.pdf" target="_self">(English)</a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">The analysis of Primal-Dual theorey</a><br>
+The analysis of Primal-Dual theorey <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">(English)</a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">A thorough introduction for Lagrange Method</a><br>
+A thorough introduction for Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self"></a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">Some work about the combination of GAN and VAE (Part 1)</a><br>
+Some work about the combination of GAN and VAE (Part 1)<a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">(Chinese)</a><br>
 <br>
-<a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">Some work about the combination of GAN and VAE (Part 2)</a><br>
+Some work about the combination of GAN and VAE (Part 2)<a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">(Chinese)</a><br>
 
