--- a/tutorials.html
+++ b/tutorials.html
@@ -14,7 +14,7 @@ The analysis of ADMM and Fast ADMM <a href="https://github.com/zhexjtu/Optimizat
 <br>
 The analysis of Primal-Dual theorey <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/31234645" target="_self">(Chinese)</a><br>
 <br>
-A thorough introduction for Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self"></a> <a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
+A thorough introduction to Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">(English)</a> <br>
 <br>
 Some work about the combination of GAN and VAE (Part 1) <a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">(Chinese)</a><br>
 <br>
