--- a/tutorials.html
+++ b/tutorials.html
@@ -3,20 +3,20 @@ layout: page
 title: Tutorials
 permalink: /tutorials/
 ---
-Take a look at some of my tutorials for Optimization and Generative Models. 
-<br>
+Generateive Model 
 <br>
 The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English) </a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
 The application of GANs in Image to Image Translation and Inverse Problems <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_application.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/27987845" target="_self">(Chinese)</a><br>
 <br>
-The analysis of ADMM and Fast ADMM <a href="https://github.com/zhexjtu/Optimization/blob/master/ADMM%2C%20fast%20ADMM%20and%20application.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">(Chinese)</a><br>
-<br>
-The analysis of Primal-Dual theorey <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/31234645" target="_self">(Chinese)</a><br>
-<br>
-A thorough introduction to Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">(English)</a> <br>
-<br>
 Some work about the combination of GAN and VAE (Part 1) <a href="https://zhuanlan.zhihu.com/p/35443095" target="_self">(Chinese)</a><br>
 <br>
 Some work about the combination of GAN and VAE (Part 2) <a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">(Chinese)</a><br>
-
+<br>
+Optimization
+<br>
+A thorough introduction to Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">(English)</a> <br>
+<br>
+The analysis of ADMM and Fast ADMM <a href="https://github.com/zhexjtu/Optimization/blob/master/ADMM%2C%20fast%20ADMM%20and%20application.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/30540477" target="_self">(Chinese)</a><br>
+<br>
+The analysis of Primal-Dual theorey <a href="https://github.com/zhexjtu/Optimization/blob/master/dual%20theorey.pdf" target="_self">(English)</a> <a href="https://zhuanlan.zhihu.com/p/31234645" target="_self">(Chinese)</a><br>
