--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,8 @@ layout: page
 title: Tutorials
 permalink: /tutorials/
 ---
-Generateive Model 
+Generative Model 
+<br>
 <br>
 The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English) </a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
 <br>
@@ -14,6 +15,7 @@ Some work about the combination of GAN and VAE (Part 1) <a href="https://zhuanla
 Some work about the combination of GAN and VAE (Part 2) <a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">(Chinese)</a><br>
 <br>
 Optimization
+<br>
 <br>
 A thorough introduction to Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">(English)</a> <br>
 <br>
