--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,7 @@ layout: page
 title: Tutorials
 permalink: /tutorials/
 ---
-subtitle: Generative Model 
+Generative Model 
 <br>
 <br>
 The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English) </a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
