--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,7 @@ layout: page
 title: Tutorials
 permalink: /tutorials/
 ---
-Generative Model 
+<strong>Generative Model</a></strong>
 <br>
 <br>
 The analysis of GANs from mathematical perspective <a href="https://github.com/zhexjtu/GAN_analysis/blob/master/GAN_analysis.pdf" target="_self">(English) </a><a href="https://zhuanlan.zhihu.com/p/27912062" target="_self">(Chinese)</a><br>
@@ -14,7 +14,7 @@ Some work about the combination of GAN and VAE (Part 1) <a href="https://zhuanla
 <br>
 Some work about the combination of GAN and VAE (Part 2) <a href="https://zhuanlan.zhihu.com/p/41363527" target="_self">(Chinese)</a><br>
 <br>
-Optimization
+<strong>Optimization</a></strong>
 <br>
 <br>
 A thorough introduction to Lagrange Method <a href="https://github.com/zhexjtu/Optimization/blob/master/Lagrange%20Method.pdf" target="_self">(English)</a> <br>
