--- a/research.html
+++ b/research.html
@@ -3,7 +3,7 @@ layout: page
 title: Research
 permalink: /research/
 ---
-<strong>Unrolling FISTA to solve Low-Rank related problems</a></strong> <br><br>
+<strong>Unrolling FISTA to solve Low-Rank Regularized problems</a></strong> <br><br>
 <p style="text-align:justify"><i>Abstract: </i>Based on the avaiable of BP Algorithm for SVD operator, it is possible to unroll ISTA into a deep nueral network for low-rank regularization problems. To accelerate the convergence rate while avoiding the design of the momentum term manually, we come up with a structure similar to LSTM aiming at learning the momentum term adaptively. This method also gives an inspiration to unroll RPCA into deep neural network by disentangling RPCA into low-rank problem and sparse problem.</p>
 <br>
 <strong>Laplace K-log: A new Laplace regularized robust algorithm for clustering </a></strong><br><br>
