--- a/index.html
+++ b/index.html
@@ -16,5 +16,5 @@ title: Zhe Wang
 <br>
 Welcome! My name is Zhe Wang and I am a master in Applied Mathematics at Xi'an Jiaotong Univeristy under the supervision of Professor <a href="http://gr.xjtu.edu.cn/web/zbxucn/1" target="_self">Zongben Xu</a> & Professor <a href="http://gr.xjtu.edu.cn/web/jiansun/main" target="_self">Jian Sun</a>. Now I'm looking for an opening position for PhD overseas.
 <br><br>
-My research interests lie in Computer Vision and Deep Learning. I am particularly interested in generative model, optimization and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/tutorials" target="_self">tutorials</a> to known more!
+My research interests lie in Machine Learning and Deep Learning. I am particularly interested in learning theory, optimization, generative model and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/tutorials" target="_self">tutorials</a> to known more!
 </div>
