--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ title: Zhe Wang
 
 <img src="profile.jpg" alt="Zhe Wang pic" style="width:240px;height:360px;" title="Zhe Wang (Photo Credit: Zhe Wang)"; algin="middle">
 <br>
-Welcome! My name is Zhe Wang and I am a master in Applied Mathematics at Xi'an Jiaotong Univeristy under the supervision of Professor <a href="http://gr.xjtu.edu.cn/web/zbxu" target="_self">Zongben Xu</a> & Professor <a href="http://gr.xjtu.edu.cn/web/jiansun/main" target="_self">Jian Sun</a>. Now I'm looking for an opening position for PhD overseas.
+Welcome! My name is Zhe Wang and I'm pursuing my Ph.D. degree in Computer Science at Univeristy of Virginia under the supervision of Professor <a href="http://gr.xjtu.edu.cn/web/zbxu" target="_self">Yanjun Qi</a>. I am interested in machine learning and focus on the machine learning tasks on discrete data, such as bio-data and text. 
 <br><br>
 My research interests lie in Machine Learning and Deep Learning. I am particularly interested in learning theory, optimization, generative model and have a systematic knowledge related to these fields. Feel free to look at my <a href="https://zhexjtu.github.io/research" target="_self">research</a> and my <a href="https://zhexjtu.github.io/tutorials" target="_self">tutorials</a> to known more!
 </div>
